--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
 
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/images/vectorIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
